--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,5 @@ name = "stanza"
 crate-type = ["cdylib"]
 
 [dependencies]
-mlua = { version = "0.5", features = ["lua52", "vendored", "module"] }
+mlua = { version = "0.6.0-beta.1", features = ["lua52", "module"] }
 bstr = { version = "0.2" }
