--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,13 @@ name = "stanza"
 crate-type = ["cdylib"]
 
 [dependencies]
-mlua = { version = "0.6.0-beta.1", features = ["lua52", "module"] }
+mlua = { version = "0.6.0-beta.1", features = ["vendored", "module"] }
 bstr = { version = "0.2" }
+
+[patch.crates-io]
+mlua = { path = "/home/horazont/Projects/rust/mlua" }
+
+[features]
+lua52 = ["mlua/lua52"]
+lua53 = ["mlua/lua53"]
+lua54 = ["mlua/lua54"]
