--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ crate-type = ["cdylib"]
 [dependencies]
 mlua = { version = "0.6.0-beta.1", features = ["vendored", "module"] }
 bstr = { version = "0.2" }
-rxml = { path = "/home/horazont/Projects/rust/rxml" }
+rxml = { path = "/home/horazont/Projects/rust/rxml", features = ["shared_ns"] }
 
 [patch.crates-io]
 mlua = { path = "/home/horazont/Projects/rust/mlua" }
