--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ crate-type = ["cdylib"]
 mlua = { version = "0.6.0-beta.1", features = ["vendored", "module"] }
 bstr = { version = "0.2" }
 rxml = { path = "/home/horazont/Projects/rust/rxml", features = ["shared_ns"] }
+smartstring = { version = "0.2" }
 
 [patch.crates-io]
 mlua = { path = "/home/horazont/Projects/rust/mlua" }
